# mobile-app-crack-toolkit

./: .env.example  README.md  SKILL.md  pyproject.toml  requirements-dev.txt  requirements.txt
references/: ai-agent-loop.md  ai-assisted-analysis.md  ai_analyzer.py  aliyun-only-architecture.md  aliyun-remote-auth-server.md  anti-frida-bypass.md  apk-protection-matrix.md  arkari-obfuscator-detection.md  auth-system-design.md  auto-patcher.md  auto-pipeline-workflow.md  batch-automation-pipeline.md  blackmamba-6.16-case-study.md  blackmamba-case-study.md  chrome-extension-reverse.md  cloud-phone-remote-device.md  crypto-protocol-analyzer.md  dbvm-environment-setup.md  deobfuscation.py  device_manager.py  direct-execution-pattern.md  dll-injection-advanced.md  dotnet-reverse-guide.md  dotnet-reverse.md  electron-asar-crack.md  elf-encryption-analysis.md  elf-injection-analysis.md  emulator-auto-config.md  environment-check.md  environment-compatibility.md  file-identification-workflow.md  firmware-iot-crack.md  frida-request-signing-guide.md  frida-request-signing.md  full-memory-dump-cloning.md  full-memory-stripper-guide.md  git-history-preference.md  gitee-github-api-automation.md  github-research-presearch-report.md  go-reverse.md  (+54 more)
scripts/: apk_analyzer.py  apk_analyzer_pro.py  apk_crack_direct.py  apk_crack_enhanced.py  apk_modifier.py  auto_crack_pipeline.py  auto_decryptor.py  auto_patcher.py  auto_push.sh  crack_integrity_checker.py  crypto_protocol_analyzer.py  dotnet_reverse.py  evolution_tracker.py  feimao_crack_template.js  full_memory_stripper.py  go_reverse.py  gui_auto.py  ida_auto_patch.py  il2cpp_dumper.py  java_bytecode_reverse.py  lua_extractor.py  memory_dump_automation.py  network_protocol_reverse.py  protocol_fuzzer.py  pyinstaller_extractor.py  rust_analyzer.py  scylla_auto_fix.py  unity_method_resolver.py  vmp_enhancer.py  vmp_trace.js
scripts/ce_plugins/: full_bright_detector.lua
src/apk_crack_engine/: __init__.py  __main__.py
src/apk_crack_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/apk_crack_engine/analysis/: apk_analyzer.py  protection.py  shell_detector.py
src/apk_crack_engine/cli/: analyze.py  batch.py  crack.py  license.py  main.py  unpack.py
src/apk_crack_engine/core/: config.py  exceptions.py  logger.py  models.py
src/apk_crack_engine/engine/: base.py  cloud.py  emulator.py  offline.py  online.py
src/apk_crack_engine/evolution/: tracker.py
src/apk_crack_engine/hooking/: anti_detect.py  lua.py  network.py  vip.py
src/apk_crack_engine/integrity/: checker.py
src/apk_crack_engine/license/: generator.py  server.py  validator.py
src/apk_crack_engine/patching/: manifest.py  repack.py  resources.py  smali.py
src/apk_crack_engine/utils/: adb.py  apk_utils.py  frida_utils.py  system.py
tests/: test_analyzer.py  test_config.py  test_integrity.py
